<resources>
    <string name="app_name">Shop Shop</string>
    <string name="dummy_large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultricies neque a egestas consectetur. Maecenas a magna enim. Donec non tempor nisi. Maecenas egestas commodo nibh. Aenean nunc eros, iaculis et efficitur eu, sollicitudin vel dui. Nullam sagittis vitae nulla a tempor. In hac habitasse platea dictumst. Donec congue vitae ligula in accumsan. Nulla mollis lacus non scelerisque tempor. Quisque lectus augue, imperdiet sed ligula ac, blandit rhoncus dolor. Donec orci nulla, blandit quis leo et, convallis vehicula eros. Curabitur et lacinia est. Quisque at erat lectus. Praesent laoreet nisl et enim suscipit, quis aliquam magna fermentum.</string>
    <string name="bookName">Steal Like an Artist</string>
    <string name="bookDescription">Description</string>
    <string name="productDetails">Details</string>
    <string name="productBrand">Brand</string>
    <string name="productDimension">Dimension</string>
    <string name="productCategory">Category</string>
    <string name="productWeight">Item weight</string>
    <string name="checkoutPageTittle">Checkout</string>
    <string name="orderDetails">Order details</string>
    <string name="amountOfProduct">459</string>
    <string name="deliveryAddress">Delivery Address</string>
    <string name="editAddressText">Edit Address</string>
    <string name="addAddress">Add Address</string>
    <string name="paymentOption">Payment Option</string>
    <string name="cardStartingDigit">************</string>
</resources>