<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app_grident"
    tools:context=".ui.CheckOutActivity">


    <ImageView
        android:id="@+id/backBtnImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/go_back_btn_img" />

    <TextView
        android:id="@+id/textViewCheckOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="14dp"
        android:text="@string/checkoutPageTittle"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/backBtnImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCheckOut">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textViewOrderDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="233dp"
                android:text="@string/orderDetails"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_contianer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewOrderDetails">

                <ImageView
                    android:id="@+id/orderedItemImage"
                    android:layout_width="116dp"
                    android:layout_height="132dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/booktwo" />

                <TextView
                    android:id="@+id/textViewOrderItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="8dp"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/orderedItemImage"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/bookName" />

                <TextView
                    android:id="@+id/textViewItemPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="32dp"
                    android:drawableEnd="@drawable/cent"
                    android:text="@string/amountOfProduct"
                    android:textColor="#FFFA7F"
                    android:textSize="24sp"
                    app:layout_constraintStart_toEndOf="@+id/orderedItemImage"
                    app:layout_constraintTop_toBottomOf="@+id/textViewOrderItemName" />

                <ImageView
                    android:id="@+id/minusIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/orderedItemImage"
                    app:layout_constraintTop_toBottomOf="@+id/textViewItemPrice"
                    app:srcCompat="@drawable/minus" />

                <TextView
                    android:id="@+id/textViewQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:text="1"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/minusIcon"
                    app:layout_constraintTop_toBottomOf="@+id/textViewItemPrice" />

                <ImageView
                    android:id="@+id/plusIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textViewQuantity"
                    app:layout_constraintTop_toBottomOf="@+id/textViewItemPrice"
                    app:srcCompat="@drawable/plus" />

                <LinearLayout
                    android:id="@+id/bucketIcon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="22dp"
                    android:background="@drawable/circular_bg"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/empty" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="233dp"
                android:text="@string/deliveryAddress"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_contianer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewAddress">

                <TextView
                    android:id="@+id/textViewUseName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="265dp"
                    tools:text="Aditya Bhandari"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewUserAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="179dp"
                    tools:text="ZXC Apartment,  3rd floor Paschim Vihar New Delhi, Delhi,110026 Phone number:7865423989"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewUseName" />

                <TextView
                    android:id="@+id/textViewEditAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="23dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="47dp"
                    android:background="@drawable/bg_details"
                    android:backgroundTint="#EE6C4D"
                    android:gravity="center"
                    android:text="@string/editAddressText"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewUserAddress" />

                <TextView
                    android:id="@+id/textViewAddAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="23dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="47dp"
                    android:background="@drawable/bg_details"
                    android:backgroundTint="#EEE7E7"
                    android:gravity="center"
                    android:text="@string/addAddress"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewEditAddress" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textViewPaymentOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="233dp"
                android:text="@string/paymentOption"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="9dp"
                android:background="@drawable/bg_contianer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPaymentOption">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout6"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/circular_bg"
                    android:backgroundTint="#84FFF0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout7"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="73dp"
                    android:background="@drawable/circular_bg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/imageViewCard"
                    android:layout_width="51dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="9dp"
                    app:layout_constraintStart_toEndOf="@+id/constraintLayout6"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/visa" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="156dp"
                    android:layout_height="49dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="41dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/constraintLayout7"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewCard"
                    app:srcCompat="@drawable/upi" />

                <TextView
                    android:id="@+id/textViewCardNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cardStartingDigit"
                    android:textColor="#FFFFFF"
                    android:textSize="36sp"
                    app:layout_constraintStart_toEndOf="@+id/imageViewCard"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="9dp"
                    tools:text="2212"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    app:layout_constraintStart_toEndOf="@+id/textViewCardNumber"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewCardDetails"
                    android:layout_width="132dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="4dp"
                    tools:text="Aditya
Expires 04/2025"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/imageViewCard"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCardNumber" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>